Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19237

Thread sanitizer detects a data race with fdb_clone_snapshot

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 4.5.0
    • forestdb
    • None
    • Untriaged
    • Unknown

    Description

      11:38:53 WARNING: ThreadSanitizer: data race (pid=116143)
      11:38:53   Write of size 8 at 0x7d380000db28 by thread T22:
      11:38:53     #0 memcpy <null> (mvcc_functional_test+0x000000462700)
      11:38:53     #1 _fdb_clone_snapshot /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:1494 (mvcc_functional_test+0x000000512302)
      11:38:53     #2 _fdb_kvs_clone_snapshot /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/kv_instance.cc:1515 (mvcc_functional_test+0x00000053961e)
      11:38:53     #3 fdb_snapshot_open /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:1057 (mvcc_functional_test+0x0000005113fa)
      11:38:53     #4 snap_clone_thread(void*) crtstuff.c (mvcc_functional_test+0x0000004d45b5)
      11:38:53 
      11:38:53   Previous write of size 8 at 0x7d380000db28 by thread T21:
      11:38:53     #0 memcpy <null> (mvcc_functional_test+0x000000462700)
      11:38:53     #1 _fdb_clone_snapshot /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:1494 (mvcc_functional_test+0x000000512302)
      11:38:53     #2 _fdb_kvs_clone_snapshot /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/kv_instance.cc:1515 (mvcc_functional_test+0x00000053961e)
      11:38:53     #3 fdb_snapshot_open /home/couchbase/jenkins/workspace/forestdb-threadsanitizer-master/forestdb/src/forestdb.cc:1057 (mvcc_functional_test+0x0000005113fa)
      11:38:53     #4 snap_clone_thread(void*) crtstuff.c (mvcc_functional_test+0x0000004d45b5)
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            abhinav Abhi Dangeti
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty