MB-19237: Avoid touching the shared snapshot during clone

[ThreadSanitizer] data race in snap_clone_test in mvcc_functional_test
When cloning a handle, it is not necessary to update the stats
in the shared snapshot handle since the snapshot handle itself is
ref counted and shared. This avoids data races when many readers
are cloning simultaneously. This allows for safe lock-free opens
among readers.

Change-Id: I805cde57bb28b30e9f6aa44a98b48b2b1c9e1b96
Reviewed-on: http://review.couchbase.org/62984
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>